--- a/app/assets/stylesheets/landings.sss.scss
+++ b/app/assets/stylesheets/landings.sss.scss
@@ -1,3 +1,7 @@
+// Place all the styles related to the Landings controller here.
+// They will automatically be included in application.css.
+// You can use Sass (SCSS) here: http://sass-lang.com/
+
 @charset "UTF-8";
 /* Simple fluid media
    Note: Fluid media requires that you remove the media's height and width attributes from the HTML
